--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,11 +26,13 @@
     "expo-intent-launcher": "^13.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.4",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
